--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,2 +1,10 @@
 @import './utils/variables';
 @import './base/normalize';
+@import './base/visually_hidden';
+@import './base/html_noeffects';
+@import './components/container';
+@import './components/header';
+@import './components/logo';
+@import './components/sections';
+@import './components/buttons';
+@import './components/footer';
