--- a/sass/base/_html_noeffects.scss
+++ b/sass/base/_html_noeffects.scss
@@ -1,8 +1,8 @@
 body {
-  background-color: var(--lighter);
-  color: var(--primary-text-color);
+  background-color: $lighter;
+  color: $primary-text-color;
 
-  font-family: 'Roboto', sans-serif;
+  font-family: $Roboto;
   letter-spacing: 0.03em;
 }
 
