--- a/sass/main.scss
+++ b/sass/main.scss
@@ -7,4 +7,10 @@
 @import './components/logo';
 @import './components/sections';
 @import './components/buttons';
+@import './components/hero';
+@import './components/advantages';
+@import './components/our_business';
+@import './components/out_team';
+@import './components/clients';
 @import './components/footer';
+@import './components/modal';
