--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -1,3 +1,12 @@
+// fonts
+@import url(https://fonts.googleapis.com);
+@import url(https://fonts.gstatic.com);
+@import url(https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap);
+
+$Roboto: 'Roboto', sans-serif;
+$Raleway: 'Raleway', sans-serif;
+
+// colors
 $primary-text-color: #757575;
 $secondary-text-color: #212121;
 $accent: #2196f3;
