--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,36 @@
 @import url(https://fonts.googleapis.com);
 @import url(https://fonts.gstatic.com);
 @import url(https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap);
+body {
+  background-color: #ffffff;
+  color: #757575;
+  font-family: "Roboto", sans-serif;
+  letter-spacing: 0.03em;
+}
+
+.main-nav, .contacts-list, .social-list, .clients-list {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
+
+.main-nav__link, .contacts-list__link, .logo {
+  text-decoration: none;
+}
+
+.header__nav, .main-nav,
+.contacts-list--vertical, .social-list, .clients-list, .client {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
 /*! modern-normalize v1.1.0 | MIT License | https://github.com/sindresorhus/modern-normalize */
 /*
 Document
@@ -273,6 +303,13 @@ summary {
   margin: -1px;
 }
 
+.container {
+  width: 1200px;
+  margin: 0 auto;
+  padding-right: 15px;
+  padding-left: 15px;
+}
+
 body {
   background-color: #ffffff;
   color: #757575;
@@ -280,25 +317,27 @@ body {
   letter-spacing: 0.03em;
 }
 
-ul {
+.main-nav, .contacts-list, .social-list, .clients-list {
   padding: 0;
   margin: 0;
   list-style: none;
 }
 
-a {
+.main-nav__link, .contacts-list__link, .logo {
   text-decoration: none;
 }
 
-address {
-  font-style: normal;
-}
-
-.container {
-  width: 1200px;
-  margin: 0 auto;
-  padding-right: 15px;
-  padding-left: 15px;
+.header__nav, .main-nav,
+.contacts-list--vertical, .social-list, .clients-list, .client {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 .header__container {
@@ -309,23 +348,12 @@ address {
   padding-bottom: 0;
 }
 
+.header__logo {
+  margin-right: 93px;
+}
+
 .no-hero__header {
   border-bottom: 1px solid #ececec;
-}
-
-.main-nav__link {
-  color: #212121;
-}
-
-.main-nav__link--current,
-.main-nav__link:hover,
-.main-nav__link:focus,
-.contacts-list__link:hover,
-.contacts-list__link:focus,
-.contacts-list__link:hover .contacts-list__icon,
-.contacts-list__link:focus .contacts-list__icon {
-  color: #2196f3;
-  fill: #2196f3;
 }
 
 .main-nav__link--current {
@@ -343,19 +371,32 @@ address {
   background-color: #2196f3;
 }
 
+.main-nav__link--current, .main-nav__link:hover, .main-nav__link:focus {
+  color: #2196f3;
+  fill: #2196f3;
+}
+
+.main-nav__link {
+  color: #212121;
+}
+
+.contacts-list__icon {
+  fill: #757575;
+  width: 16px;
+  height: 16px;
+  margin-right: 10px;
+}
+
 .contacts-list__link {
   color: inherit;
 }
 
-.header__nav,
-.main-nav,
-.contacts-list--vertical {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+.contacts-list__link:hover,
+.contacts-list__link:focus,
+.contacts-list__link:hover .contacts-list__icon,
+.contacts-list__link:focus .contacts-list__icon {
+  color: #2196f3;
+  fill: #2196f3;
 }
 
 .contacts-list {
@@ -380,13 +421,6 @@ address {
   letter-spacing: 0.02em;
 }
 
-.contacts-list__icon {
-  fill: #757575;
-  width: 16px;
-  height: 16px;
-  margin-right: 10px;
-}
-
 .logo {
   display: block;
   font-family: "Raleway", sans-serif;
@@ -398,10 +432,6 @@ address {
 
 .logo--highlight {
   color: #2196f3;
-}
-
-.header__logo {
-  margin-right: 93px;
 }
 
 .section {
@@ -428,9 +458,7 @@ address {
   font-family: inherit;
 }
 
-.button--primary,
-.products__button:hover,
-.products__button:focus {
+.button--primary, .button__button:hover, .button__button:focus {
   color: #ffffff;
   background-color: #2196f3;
   -webkit-box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
@@ -625,16 +653,6 @@ address {
   background-color: #ffffff;
 }
 
-.social-list,
-.clients-list {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-}
-
 .social-list__item {
   border-radius: 50%;
   margin-right: 10px;
@@ -674,15 +692,6 @@ address {
 }
 
 .client {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
   width: inherit;
   height: inherit;
   border: 1px solid #afb1b8;
@@ -699,11 +708,12 @@ address {
   fill: #afb1b8;
 }
 
-.client:hover,
-.client:focus,
+.client:hover, .client:focus {
+  border-color: #2196f3;
+}
+
 .client:hover .client__icon,
 .client:focus .client__icon {
-  border-color: #2196f3;
   fill: #2196f3;
 }
 
@@ -743,6 +753,7 @@ address {
   color: #ffffff;
   font-size: 14px;
   line-height: 1.7;
+  font-style: normal;
 }
 
 .contacts-list__link--vertical {
@@ -1167,5 +1178,32 @@ address {
   font-size: 16px;
   line-height: 1.87;
   letter-spacing: 0.06em;
+}
+
+button,
+a {
+  -webkit-transition: color 250ms cubic-bezier(0.1, 0.7, 1, 0.1);
+  transition: color 250ms cubic-bezier(0.1, 0.7, 1, 0.1);
+}
+
+.product,
+.button--secondary {
+  -webkit-transition: -webkit-box-shadow 250ms cubic-bezier(0.1, 0.7, 1, 0.1);
+  transition: -webkit-box-shadow 250ms cubic-bezier(0.1, 0.7, 1, 0.1);
+  transition: box-shadow 250ms cubic-bezier(0.1, 0.7, 1, 0.1);
+  transition: box-shadow 250ms cubic-bezier(0.1, 0.7, 1, 0.1), -webkit-box-shadow 250ms cubic-bezier(0.1, 0.7, 1, 0.1);
+}
+
+.social-link,
+.button--secondary {
+  -webkit-transition: background 250ms cubic-bezier(0.1, 0.7, 1, 0.1);
+  transition: background 250ms cubic-bezier(0.1, 0.7, 1, 0.1);
+}
+
+.contacts-list__icon,
+.client__icon,
+.social-link__icon {
+  -webkit-transition: fill 250ms cubic-bezier(0.1, 0.7, 1, 0.1);
+  transition: fill 250ms cubic-bezier(0.1, 0.7, 1, 0.1);
 }
 /*# sourceMappingURL=main.css.map */
