--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -273,6 +273,13 @@ summary {
   margin: -1px;
 }
 
+.container {
+  width: 1200px;
+  margin: 0 auto;
+  padding-right: 15px;
+  padding-left: 15px;
+}
+
 body {
   background-color: #ffffff;
   color: #757575;
@@ -280,25 +287,27 @@ body {
   letter-spacing: 0.03em;
 }
 
-ul {
+.main-nav, .contacts-list, .products-view, .card-set--products, .social-list {
   padding: 0;
   margin: 0;
   list-style: none;
 }
 
-a {
+.main-nav__link, .contacts-list__link, .logo {
   text-decoration: none;
 }
 
-address {
-  font-style: normal;
-}
-
-.container {
-  width: 1200px;
-  margin: 0 auto;
-  padding-right: 15px;
-  padding-left: 15px;
+.header__nav, .main-nav,
+.contacts-list--vertical, .products-view, .social-list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 .header__container {
@@ -309,23 +318,12 @@ address {
   padding-bottom: 0;
 }
 
+.header__logo {
+  margin-right: 93px;
+}
+
 .no-hero__header {
   border-bottom: 1px solid #ececec;
-}
-
-.main-nav__link {
-  color: #212121;
-}
-
-.main-nav__link--current,
-.main-nav__link:hover,
-.main-nav__link:focus,
-.contacts-list__link:hover,
-.contacts-list__link:focus,
-.contacts-list__link:hover .contacts-list__icon,
-.contacts-list__link:focus .contacts-list__icon {
-  color: #2196f3;
-  fill: #2196f3;
 }
 
 .main-nav__link--current {
@@ -343,19 +341,32 @@ address {
   background-color: #2196f3;
 }
 
+.main-nav__link--current, .main-nav__link:hover, .main-nav__link:focus {
+  color: #2196f3;
+  fill: #2196f3;
+}
+
+.main-nav__link {
+  color: #212121;
+}
+
+.contacts-list__icon {
+  fill: #757575;
+  width: 16px;
+  height: 16px;
+  margin-right: 10px;
+}
+
 .contacts-list__link {
   color: inherit;
 }
 
-.header__nav,
-.main-nav,
-.contacts-list--vertical {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+.contacts-list__link:hover,
+.contacts-list__link:focus,
+.contacts-list__link:hover .contacts-list__icon,
+.contacts-list__link:focus .contacts-list__icon {
+  color: #2196f3;
+  fill: #2196f3;
 }
 
 .contacts-list {
@@ -380,13 +391,6 @@ address {
   letter-spacing: 0.02em;
 }
 
-.contacts-list__icon {
-  fill: #757575;
-  width: 16px;
-  height: 16px;
-  margin-right: 10px;
-}
-
 .logo {
   display: block;
   font-family: "Raleway", sans-serif;
@@ -398,10 +402,6 @@ address {
 
 .logo--highlight {
   color: #2196f3;
-}
-
-.header__logo {
-  margin-right: 93px;
 }
 
 .section {
@@ -428,9 +428,7 @@ address {
   font-family: inherit;
 }
 
-.button--primary,
-.products__button:hover,
-.products__button:focus {
+.button--primary, .button__button:hover, .button__button:focus {
   color: #ffffff;
   background-color: #2196f3;
   -webkit-box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
@@ -452,12 +450,6 @@ address {
 }
 
 .products-view {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
   margin-bottom: 50px;
 }
 
@@ -552,6 +544,38 @@ address {
   bottom: 0;
 }
 
+.social-list__item {
+  border-radius: 50%;
+  margin-right: 10px;
+}
+
+.social-list__item:last-child,
+.clients-list__item:last-child {
+  margin-right: 0;
+}
+
+.social-link {
+  display: block;
+  border-radius: 50%;
+  padding: 12px;
+  width: 44px;
+  height: 44px;
+}
+
+.social-link__icon {
+  fill: #afb1b8;
+}
+
+.social-link:hover,
+.social-link:focus {
+  background-color: #2196f3;
+}
+
+.social-link:hover .social-link__icon,
+.social-link:focus .social-link__icon {
+  fill: #ffffff;
+}
+
 .footer {
   padding: 60px 15px 60px 15px;
   background-color: #2f303a;
@@ -588,6 +612,7 @@ address {
   color: #ffffff;
   font-size: 14px;
   line-height: 1.7;
+  font-style: normal;
 }
 
 .contacts-list__link--vertical {
@@ -722,6 +747,33 @@ address {
   fill: #ffffff;
 }
 
+button,
+a {
+  -webkit-transition: color 250ms cubic-bezier(0.1, 0.7, 1, 0.1);
+  transition: color 250ms cubic-bezier(0.1, 0.7, 1, 0.1);
+}
+
+.product,
+.button--secondary {
+  -webkit-transition: -webkit-box-shadow 250ms cubic-bezier(0.1, 0.7, 1, 0.1);
+  transition: -webkit-box-shadow 250ms cubic-bezier(0.1, 0.7, 1, 0.1);
+  transition: box-shadow 250ms cubic-bezier(0.1, 0.7, 1, 0.1);
+  transition: box-shadow 250ms cubic-bezier(0.1, 0.7, 1, 0.1), -webkit-box-shadow 250ms cubic-bezier(0.1, 0.7, 1, 0.1);
+}
+
+.social-link,
+.button--secondary {
+  -webkit-transition: background 250ms cubic-bezier(0.1, 0.7, 1, 0.1);
+  transition: background 250ms cubic-bezier(0.1, 0.7, 1, 0.1);
+}
+
+.contacts-list__icon,
+.client__icon,
+.social-link__icon {
+  -webkit-transition: fill 250ms cubic-bezier(0.1, 0.7, 1, 0.1);
+  transition: fill 250ms cubic-bezier(0.1, 0.7, 1, 0.1);
+}
+
 .our-team__section {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -763,47 +815,5 @@ address {
   -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
           box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   background-color: #ffffff;
-}
-
-.social-list,
-.clients-list {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-}
-
-.social-list__item {
-  border-radius: 50%;
-  margin-right: 10px;
-}
-
-.social-list__item:last-child,
-.clients-list__item:last-child {
-  margin-right: 0;
-}
-
-.social-link {
-  display: block;
-  border-radius: 50%;
-  padding: 12px;
-  width: 44px;
-  height: 44px;
-}
-
-.social-link__icon {
-  fill: #afb1b8;
-}
-
-.social-link:hover,
-.social-link:focus {
-  background-color: #2196f3;
-}
-
-.social-link:hover .social-link__icon,
-.social-link:focus .social-link__icon {
-  fill: #ffffff;
 }
 /*# sourceMappingURL=portfolio.css.map */
