--- a/sass/components/_advantages.scss
+++ b/sass/components/_advantages.scss
@@ -1,42 +1,43 @@
 .advantages {
   display: flex;
-}
 
-.advantages__item {
-  display: block;
-  width: calc((100% - 3 * 30px) / 4);
-  margin-right: 30px;
-}
+  // make var width for adapt. ?
+  &__item {
+    display: block;
+    width: calc((100% - 3 * 30px) / 4);
+    margin-right: 30px;
+  }
 
-.advantages__item:last-child {
-  margin-right: 0;
-}
+  &__item:last-child {
+    margin-right: 0;
+  }
 
-.advantages__icon-bg {
-  display: flex;
-  width: 270px;
-  height: 120px;
-  margin-bottom: 30px;
-  justify-content: center;
-  align-items: center;
-  background-color: $bg-secondary;
-}
+  &__icon-bg {
+    display: flex;
+    width: 270px;
+    height: 120px;
+    margin-bottom: 30px;
+    justify-content: center;
+    align-items: center;
+    background-color: $bg-secondary;
+  }
 
-.advantages__title {
-  margin: 0 auto 10px;
+  &__title {
+    margin: 0 auto 10px;
 
-  font-weight: 700;
-  font-size: 14px;
-  line-height: 1.14;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 1.14;
 
-  text-transform: uppercase;
+    text-transform: uppercase;
 
-  color: $secondary-text-color;
-}
+    color: $secondary-text-color;
+  }
 
-.advantages__text {
-  margin: 0 auto;
+  &__text {
+    margin: 0 auto;
 
-  font-size: 14px;
-  line-height: 1.7;
+    font-size: 14px;
+    line-height: 1.7;
+  }
 }
