--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -7,18 +7,18 @@
   border-radius: 4px;
 
   font-family: inherit;
-}
 
-.button--primary,
-.products__button:hover,
-.products__button:focus {
-  color: $lighter;
-  background-color: $accent;
-  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
-    0px 2px 2px rgba(0, 0, 0, 0.12);
-}
+  &--primary,
+  &__button:hover,
+  &__button:focus {
+    color: $lighter;
+    background-color: $accent;
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+      0px 2px 2px rgba(0, 0, 0, 0.12);
+  }
 
-.button--secondary {
-  color: $secondary-text-color;
-  background-color: $bg-secondary;
+  &--secondary {
+    color: $secondary-text-color;
+    background-color: $bg-secondary;
+  }
 }
